feat:module product and add authorization
